--- a/index.html
+++ b/index.html
@@ -15,4 +15,6 @@
 	
 	<p><div class="note">3</div><a href="03.anri – 悲しみが止まらない.html">Anri – 悲しみが止まらない</a></p>
 	
+	<a href="test.html">heeeey</a>
+	
 </div>
