--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <div class="song"><p>˖⁺‧₊˚✦ jmix ✦˚₊‧⁺˖</p></div>
 
 <div class="song">
-	<p><div class="note">1</div><a href="01.go!go!7188 – ジェットにんぢん.html">GO!GO!7188 – ジェットにんぢん</a></p>
+	<p><div class="note">1</div><a href="01_go!go!7188_ジェットにんぢん.html">GO!GO!7188 – ジェットにんぢん</a></p>
 	
-	<p><div class="note">2</div><a href="02.akiko yano – ただいま.html">Akiko Yano – ただいま</a></p>
+	<p><div class="note">2</div><a href="02_akiko yano_ただいま.html">Akiko Yano – ただいま</a></p>
 	
-	<p><div class="note">3</div><a href="03.anri – 悲しみが止まらない.html">Anri – 悲しみが止まらない</a></p>
+	<p><div class="note">3</div><a href="03_anri_悲しみが止まらない.html">Anri – 悲しみが止まらない</a></p>
 	
 	<a href="test.html">heeeey</a>
 	
