--- a/01.html
+++ b/01.html
@@ -40,7 +40,7 @@
 <p>いつもの<ruby><rb>様</rb><rt>よう</rt></ruby>に　<ruby><rb>街</rb><rt>まち</rt></ruby>を<ruby><rb>歩</rb><rt>ある</rt></ruby>いていたんだ</p>
 <p>ねぼけまなこで　あくびなんかしながら</p>
 <p><ruby><rb>空</rb><rt>そら</rt></ruby>の<ruby><rb>彼方</rb><rt>かなた</rt></ruby>から　<ruby><rb>流</rb><rt>なが</rt></ruby>れ<ruby><rb>星</rb><rt>ぼし</rt></ruby>を<ruby><rb>見</rb><rt>み</rt></ruby>た!</p>
-<p>ジェットにんぢん　オレンヂの<ruby><rb>光</rb><rt>ひかり</rt></ruby></p>
+<p>いやそれは<ruby><rb>違</rb><rt>ちが</rt></ruby>う　まだ<ruby><rb>昼間</rb><rt>ひるま</rt></ruby>なのに</p>
 <p>その<ruby><rb>時</rb><rt>とき</rt></ruby>なんだ!!</p>
 
 </div><div class="verse">
