--- a/03.html
+++ b/03.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-    <link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="style.css">
 	<script src="script.js">
 	</script>
 </head>
 <body>
 
 <div class="song">
-	<p><div class="note" style="text-indent:-2px">♫</div>	Anri – <a href="https://open.spotify.com/track/3FYDqY5BRtx3IVSaiQZSze?si=fb39318f40234fe8" target="_blank">悲しみが止まらない</a> ↗</p>
+	<p><div class="note" style="text-indent:-2px">♫</div>	GO!GO!7188 – <a href="https://open.spotify.com/track/4dbYEeyp0Ercj2zBp5x8Xh?si=655ebbea4a9746de" target="_blank">ジェットにんぢん</a> ↗</p>
 	
 	<p>
 		<label class="switch" style="vertical-align:middle;">
@@ -17,11 +17,11 @@
 	</p>
 	
 	<p style="width:350px;height:20px;">
-		<span style="background-color:#c5bdba;display:inline-block;width:26%;height:100%;margin:0;">
-		</span><span style="background-color:#a4b5b5;display:inline-block;width:30%;height:100%;margin:0;">	
-		</span><span style="background-color:#d6d1ab;display:inline-block;width:26%;height:100%;margin:0;">
-		</span><span style="background-color:#dbbc85;display:inline-block;width:10%;height:100%;margin:0;">	
-		</span><span style="background-color:#dbcab0;display:inline-block;width:6%;height:100%;margin:0px !important;">	
+		<span style="background-color:#c5bdba;display:inline-block;width:27%;height:100%;margin:0;">
+		</span><span style="background-color:#a4b5b5;display:inline-block;width:17%;height:100%;margin:0;">	
+		</span><span style="background-color:#d6d1ab;display:inline-block;width:25%;height:100%;margin:0;">
+		</span><span style="background-color:#dbbc85;display:inline-block;width:13%;height:100%;margin:0;">	
+		</span><span style="background-color:#dbcab0;display:inline-block;width:17%;height:100%;margin:0px !important;">	
 		</span><span style="background-color:#efa571;display:inline-block;width:0%;height:100%;margin:0;">
 		</span>
 	</p>
@@ -30,67 +30,52 @@
 
 </div><div class="verse">
 
-<p class="english">I Can't Stop　The Loneliness</p>
-<p>こらえ<ruby><rb>切</rb><rt>き</rt></ruby>れず</p>
-<p><ruby><rb>悲</rb><rt>かな</rt></ruby>しみがとまらない</p>
-<p class="english">I Can't Stop　The Loneliness</p>
-<p>どうしてなの</p>
-<p><ruby><rb>悲</rb><rt>かな</rt></ruby>しみがとまらない</p>
+<p>ジェットにんぢん　<ruby><rb>空</rb><rt>そら</rt></ruby>とぶにんぢん</p>
+<p>きのう<ruby><rb>見</rb><rt>み</rt></ruby>たんだ　<ruby><rb>夢</rb><rt>ゆめ</rt></ruby>じゃないのさ</p>
+<p>ジェットにんぢん　オレンヂの<ruby><rb>光</rb><rt>ひかり</rt></ruby></p>
+<p>すごいスピード　ジェットにんぢん</p>
 
 </div><div class="verse">
 
-<p>あなたに<ruby><rb>彼女</rb><rt>かのじょ</rt></ruby>　<ruby><rb>会</rb><rt>あ</rt></ruby>わせたことを</p>
-<p>わたし<ruby><rb>今</rb><rt>いま</rt></ruby>も<ruby><rb>悔</rb><rt>く</rt></ruby>やんでいる</p>
-<p>ふたりはシンパシィ　<ruby><rb>感</rb><rt>かん</rt></ruby>じてた</p>
-<p><ruby><rb>昼下</rb><rt>ひるさ</rt></ruby>がりのカフェテラス</p>
+<p>いつもの<ruby><rb>様</rb><rt>よう</rt></ruby>に　<ruby><rb>街</rb><rt>まち</rt></ruby>を<ruby><rb>歩</rb><rt>ある</rt></ruby>いていたんだ</p>
+<p>ねぼけまなこで　あくびなんかしながら</p>
+<p><ruby><rb>空</rb><rt>そら</rt></ruby>の<ruby><rb>彼方</rb><rt>かなた</rt></ruby>から　<ruby><rb>流</rb><rt>なが</rt></ruby>れ<ruby><rb>星</rb><rt>ぼし</rt></ruby>を<ruby><rb>見</rb><rt>み</rt></ruby>た!</p>
+<p>いやそれは<ruby><rb>違</rb><rt>ちが</rt></ruby>う　まだ<ruby><rb>昼間</rb><rt>ひるま</rt></ruby>なのに</p>
+<p>その<ruby><rb>時</rb><rt>とき</rt></ruby>なんだ!!</p>
 
 </div><div class="verse">
 
-<p>あの<ruby><rb>日</rb><rt>ひ</rt></ruby><ruby><rb>電話</rb><rt>でんわ</rt></ruby>が</p>
-<p>ふいに<ruby><rb>鳴</rb><rt>な</rt></ruby>ったの</p>
-<p>あの<ruby><rb>人</rb><rt>ひと</rt></ruby>と　<ruby><rb>別</rb><rt>わか</rt></ruby>れてと</p>
-<p><ruby><rb>彼女</rb><rt>かのじょ</rt></ruby>から</p>
+<p>ジェットにんぢん　<ruby><rb>空</rb><rt>そら</rt></ruby>とぶにんぢん</p>
+<p><ruby><rb>頭</rb><rt>あたま</rt></ruby>の<ruby><rb>上</rb><rt>うえ</rt></ruby>を　すごい<ruby><rb>速</rb><rt>はや</rt></ruby>さで</p>
+<p>ジェットにんぢん　まばゆい<ruby><rb>光</rb><rt>ひかり</rt></ruby></p>
+<p>いいことあるよ　ジェットにんぢん</p>
 
 </div><div class="verse">
 
-<p class="english">I Can't Stop　The Loneliness</p>
-<p>どうしてなの</p>
-<p><ruby><rb>悲</rb><rt>かな</rt></ruby>しみがとまらない</p>
+<p>きのうまた　つまらないことでケンカして</p>
+<p><ruby><rb>今日</rb><rt>きょう</rt></ruby>ゴメンって　<ruby><rb>電話</rb><rt>でんわ</rt></ruby>しようと<ruby><rb>思</rb><rt>おも</rt></ruby>ってたまさに</p>
+<p>その<ruby><rb>時</rb><rt>とき</rt></ruby>なんだ!　<ruby><rb>窓</rb><rt>まど</rt></ruby>の<ruby><rb>外</rb><rt>そと</rt></ruby>を<ruby><rb>見</rb><rt>み</rt></ruby>た</p>
+<p><ruby><rb>真</rb><rt>ま</rt></ruby>っ<ruby><rb>赤</rb><rt>か</rt></ruby>に<ruby><rb>染</rb><rt>そ</rt></ruby>まる　<ruby><rb>夕日</rb><rt>ゆうひ</rt></ruby>に<ruby><rb>映</rb><rt>うつ</rt></ruby>ったものは</p>
 
 </div><div class="verse">
 
-<p><ruby><rb>誤解</rb><rt>ごかい</rt></ruby>だよって　あなたは<ruby><rb>笑</rb><rt>わら</rt></ruby>う</p>
-<p>だけどkissはウソのにおい</p>
-<p><ruby><rb>抱</rb><rt>だ</rt></ruby>きしめられて　<ruby><rb>気</rb><rt>き</rt></ruby>づいたの</p>
-<p><ruby><rb>愛</rb><rt>あい</rt></ruby>がここにないことを</p>
+<p>その<ruby><rb>時</rb><rt>とき</rt></ruby>なんだ!　<ruby><rb>窓</rb><rt>まど</rt></ruby>の<ruby><rb>外</rb><rt>そと</rt></ruby>を<ruby><rb>見</rb><rt>み</rt></ruby>た</p>
+<p><ruby><rb>真</rb><rt>ま</rt></ruby>っ<ruby><rb>赤</rb><rt>か</rt></ruby>に<ruby><rb>染</rb><rt>そ</rt></ruby>まる　<ruby><rb>夕日</rb><rt>ゆうひ</rt></ruby>に<ruby><rb>映</rb><rt>うつ</rt></ruby>ったものは</p>
+<p>ジェットにんぢん</p>
 
 </div><div class="verse">
 
-<p><ruby><rb>恋</rb><rt>こい</rt></ruby>はちいさな</p>
-<p>アラシみたいに</p>
-<p><ruby><rb>友</rb><rt>とも</rt></ruby>だちも　<ruby><rb>恋人</rb><rt>こいびと</rt></ruby>も</p>
-<p><ruby><rb>奪</rb><rt>うば</rt></ruby>って</p>
+<p>ジェットにんぢん　<ruby><rb>空</rb><rt>そら</rt></ruby>とぶにんぢん</p>
+<p>きのう<ruby><rb>見</rb><rt>み</rt></ruby>たんだ　<ruby><rb>夢</rb><rt>ゆめ</rt></ruby>じゃないのさ</p>
+<p>ジェットにんぢん　オレンヂの<ruby><rb>光</rb><rt>ひかり</rt></ruby></p>
+<p>すごいスピード　ジェットにんぢん</p>
 
 </div><div class="verse">
 
-<p class="english">I Can't Stop　The Loneliness</p>
-<p><ruby><rb>彼</rb><rt>かれ</rt></ruby>を<ruby><rb>返</rb><rt>かえ</rt></ruby>して</p>
-<p><ruby><rb>悲</rb><rt>かな</rt></ruby>しみがとまらない</p>
-
-</div><div class="verse">
-
-<p class="english">I Can't Stop　The Loneliness</p>
-<p>だれか<ruby><rb>救</rb><rt>たす</rt></ruby>けて</p>
-<p><ruby><rb>悲</rb><rt>かな</rt></ruby>しみがとまらない</p>
-
-</div><div class="verse">
-
-<p class="english">I Can't Stop　The Loneliness</p>
-<p>こらえ<ruby><rb>切</rb><rt>き</rt></ruby>れず</p>
-<p><ruby><rb>悲</rb><rt>かな</rt></ruby>しみがとまらない</p>
-<p class="english">I Can't Stop　The Loneliness</p>
-<p>どうしてなの</p>
-<p><ruby><rb>悲</rb><rt>かな</rt></ruby>しみがとまらない</p>
+<p>ジェットにんぢん　<ruby><rb>空</rb><rt>そら</rt></ruby>とぶにんぢん</p>
+<p>きっと<ruby><rb>誰</rb><rt>だれ</rt></ruby>かの　<ruby><rb>聞</rb><rt>き</rt></ruby>きまちがい</p>
+<p>ジェットにんぢん　<ruby><rb>昔</rb><rt>むかし</rt></ruby>はやった</p>
+<p><ruby><rb>歌手</rb><rt>かしゅ</rt></ruby>の<ruby><rb>名前</rb><rt>なまえ</rt></ruby>は　ジッタリン・ジン</p>
 
 </div>
 
