--- a/02.html
+++ b/02.html
@@ -72,7 +72,7 @@
 </div><div class="verse">
 
 <p><ruby><rb>靴下</rb><rt>くつした</rt></ruby><ruby><rb>脱</rb><rt>ぬ</rt></ruby>いで<ruby><rb>足元</rb><rt>あしもと</rt></ruby>スッキリ</p>
-<p>シャワーを<ruby><rb>浴</rb><rt>あ</rt></ruby>びて<ruby><rb>身体</rb><rt>しんたい</rt></ruby>もさっぱり</p>
+<p>シャワーを<ruby><rb>浴</rb><rt>あ</rt></ruby>びて<ruby><rb>身体</rb><rt>からだ</rt></ruby>もさっぱり</p>
 <p><ruby><rb>新品</rb><rt>しんぴん</rt></ruby>の<ruby><rb>今治</rb><rt>いまばり</rt></ruby>たおる<ruby><rb>使</rb><rt>つか</rt></ruby>っちゃう</p>
 <p><ruby><rb>贅沢</rb><rt>ぜいたく</rt></ruby>な<ruby><rb>気分</rb><rt>きぶん</rt></ruby>　<ruby><rb>味</rb><rt>あじ</rt></ruby>わっちゃう</p>
 
