--- a/03.html
+++ b/03.html
@@ -1,6 +1,12 @@
 <html>
 <head>
 	<link rel="stylesheet" href="style.css">
+	<style>
+		.note{
+			--notebgcolor: #db9c42;
+			--notecolor: #d3c8c3;
+		}
+	</style>
 	<script src="script.js">
 	</script>
 </head>
