--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <html>
 <head>
 	<link rel="stylesheet" href="style.css">
+	<style>
+		.note{
+			--notebgcolor: #db9c42;
+			--notecolor: #d3c8c3;
+		}
+	</style>
 	<script src="script.js">
 	</script>
 </head>
 <body>
 
-<div class="song"><p>˖⁺‧₊˚✦ jmix ✦˚₊‧⁺˖</p></div>
+<div class="song"><p><span style="color:#d3b690;">˖</span><span style="color:#d3c8c3;">⁺</span><span style="color:#d3b690;">‧</span><span style="color:#d3c8c3;">₊</span><span style="color:#ba8a33;">˚</span><span style="color:#db9c42;">✦</span> jmix <span style="color:#db9c42;">✦</span><span style="color:#ba8a33;">˚</span><span style="color:#d3c8c3;">₊</span><span style="color:#d3b690;">‧</span><span style="color:#d3c8c3;">⁺</span><span style="color:#d3b690;">˖</span></p></div>
 
 <div class="song">
 	<p><div class="note">1</div><a href="01.html">Anri – 悲しみが止まらない</a></p>
