--- a/06.html
+++ b/06.html
@@ -35,45 +35,75 @@
 	<p style="color:#757541;font-size:16px;">readability: <span style="padding:2px;background-color:#a4b5b5">easy</span></p>
 
 </div><div class="verse">
+	
+<p>ダーリン　<ruby><rb>今夜</rb><rt>こんや</rt></ruby>は<ruby><rb>迎</rb><rt>むか</rt></ruby>えにきてきて</p>
+<p>うるさいやつらが　<ruby><rb>多</rb><rt>おお</rt></ruby>くて<ruby><rb>困</rb><rt>こま</rt></ruby>ってる</p>
+<p>いつも　<ruby><rb>困</rb><rt>こま</rt></ruby>らせてたけれど</p>
+<p>ないものねだりはもうやめるわ</p>
 
+</div><div class=verse>
 
-ダーリン　今夜は迎えにきてきて
-うるさいやつらが　多くて困ってる
-いつも　困らせてたけれど
-ないものねだりはもうやめるわ
+<p><ruby><rb>化粧</rb><rt>けしょう</rt></ruby><ruby><rb>落</rb><rt>お</rt></ruby>とした<ruby><rb>後</rb><rt>のち</rt></ruby>の</p>
+<p><ruby><rb>鏡</rb><rt>かがみ</rt></ruby>の<ruby><rb>中</rb><rt>なか</rt></ruby>の<ruby><rb>顔</rb><rt>かお</rt></ruby></p>
+<p><ruby><rb>本当</rb><rt>ほんとう</rt></ruby>はまだ<ruby><rb>離</rb><rt>はな</rt></ruby>れたくない</p>
+<p><ruby><rb>涙</rb><rt>なみだ</rt></ruby>でゆがんでる</p>
 
-化粧落とした後の
-鏡の中の顔
-本当はまだ離れたくない
-涙でゆがんでる
+</div><div class=verse>
 
-Everyday Everynight　会いたくて
-Everyday Everynight　夢を見た
+<p class="english">Everyday Everynight</p>
+<p><ruby><rb>会</rb><rt>あ</rt></ruby>いたくて</p>
+<p class="english">Everyday Everynight</p>
+<p><ruby><rb>夢</rb><rt>ゆめ</rt></ruby>を<ruby><rb>見</rb><rt>み</rt></ruby>た</p>
 
-ダーリン　そろそろ　潮時みたいね
-今なら　まだまだ　だれも気付いてない
-街で　もし　すれ違っても
-他人の　ふりしていて　あげるわ
+</div><div class=verse>
 
-冷めたふりをしたのも
-忘れられないから
-テレフォンナンバー変えたのも
-意地悪してじゃない
+<p>ダーリン　そろそろ　<ruby><rb>潮時</rb><rt>しおどき</rt></ruby>みたいね</p>
+<p><ruby><rb>今</rb><rt>いま</rt></ruby>なら　まだまだ　だれも<ruby><rb>気付</rb><rt>きづ</rt></ruby>いてない</p>
+<p><ruby><rb>街</rb><rt>まち</rt></ruby>で　もし　すれ<ruby><rb>違</rb><rt>ちが</rt></ruby>っても</p>
+<p><ruby><rb>他人</rb><rt>たにん</rt></ruby>の　ふりしていて　あげるわ</p>
 
-Everyday Everynight　会いたくて
-Everyday Everynight　夢を見た
+</div><div class=verse>
 
-ダーリン　神戸の港のロフトで
-昔は会う度　朝まで騒いだね
-机の上　フォトスタンド
-色あせた　思い出に　さよなら
+<p><ruby><rb>冷</rb><rt>さ</rt></ruby>めたふりをしたのも</p>
+<p><ruby><rb>忘</rb><rt>わす</rt></ruby>れられないから</p>
+<p>テレフォンナンバー<ruby><rb>変</rb><rt>か</rt></ruby>えたのも</p>
+<p><ruby><rb>意地悪</rb><rt>いじわる</rt></ruby>してじゃない</p>
 
-夜中に目が覚めれば　胸が痛むけれど
-もう　泣いてばかりいないから
-彼女と仲良くね
+</div><div class=verse>
 
-Everyday Everynight　会いたくて
-Everyday Everynight　夢を見た
+<p class="english">Everyday Everynight</p>
+<p><ruby><rb>会</rb><rt>あ</rt></ruby>いたくて</p>
+<p class="english">Everyday Everynight</p>
+<p><ruby><rb>夢</rb><rt>ゆめ</rt></ruby>を<ruby><rb>見</rb><rt>み</rt></ruby>た</p>
 
-Everyday Everynight　会いたくて
-Everyday Everynight　夢を見た
+</div><div class=verse>
+
+<p>ダーリン　<ruby><rb>神戸</rb><rt>こうべ</rt></ruby>の<ruby><rb>港</rb><rt>みなと</rt></ruby>のろふとで</p>
+<p><ruby><rb>昔</rb><rt>むかし</rt></ruby>は<ruby><rb>会</rb><rt>あ</rt></ruby>う<ruby><rb>度</rb><rt>たび</rt></ruby>　<ruby><rb>朝</rb><rt>あさ</rt></ruby>まで<ruby><rb>騒</rb><rt>さわ</rt></ruby>いだね</p>
+<p><ruby><rb>机</rb><rt>つくえ</rt></ruby>の<ruby><rb>上</rb><rt>うえ</rt></ruby>　フォトスタンド</p>
+<p><ruby><rb>色</rb><rt>いろ</rt></ruby>あせた　<ruby><rb>思</rb><rt>おも</rt></ruby>い<ruby><rb>出</rb><rt>で</rt></ruby>に　さよなら</p>
+
+</div><div class=verse>
+
+<p><ruby><rb>夜中</rb><rt>よなか</rt></ruby>に<ruby><rb>目</rb><rt>め</rt></ruby>が<ruby><rb>覚</rb><rt>さ</rt></ruby>めれば　<ruby><rb>胸</rb><rt>むね</rt></ruby>が<ruby><rb>痛</rb><rt>いた</rt></ruby>むけれど</p>
+<p>もう　<ruby><rb>泣</rb><rt>な</rt></ruby>いてばかりいないから</p>
+<p><ruby><rb>彼女</rb><rt>かのじょ</rt></ruby>と<ruby><rb>仲良</rb><rt>なかよ</rt></ruby>くね</p>
+
+</div><div class=verse>
+
+<p class="english">Everyday Everynight</p>
+<p><ruby><rb>会</rb><rt>あ</rt></ruby>いたくて</p>
+<p class="english">Everyday Everynight</p>
+<p><ruby><rb>夢</rb><rt>ゆめ</rt></ruby>を<ruby><rb>見</rb><rt>み</rt></ruby>た</p>
+
+</div><div class=verse>
+
+<p class="english">Everyday Everynight</p>
+<p><ruby><rb>会</rb><rt>あ</rt></ruby>いたくて</p>
+<p class="english">Everyday Everynight</p>
+<p><ruby><rb>夢</rb><rt>ゆめ</rt></ruby>を<ruby><rb>見</rb><rt>み</rt></ruby>た</p>
+
+</div>
+
+</body>
+</html>
