working on fishmans

--- a/05.html
+++ b/05.html
@@ -46,8 +46,10 @@
 このまま連れてってよ　僕だけを連れてってよ
 どこまでも連れてってよ
 
-君とだけ二人落ちていく　BABY, IT'S BLUE
-友達もいなくなって　BABY, IT'S BLUE
+君とだけ二人落ちていく
+BABY, IT'S BLUE
+友達もいなくなって
+BABY, IT'S BLUE
 
 夕暮れの君の影を追いかけながら
 今もこのままで　止まっちまいたい　そんな僕さ
@@ -59,6 +61,9 @@
 このまま連れてってよ　僕だけを連れてってよ
 遠くへ連れてってよ
 
-君とだけ二人落ちていく　BABY, IT'S BLUE
-友達もいなくなって　BABY, IT'S BLUE
-誰よりも　大好きだった　BABY, IT'S BLUE
+君とだけ二人落ちていく
+BABY, IT'S BLUE
+友達もいなくなって
+BABY, IT'S BLUE
+誰よりも　大好きだった
+BABY, IT'S BLUE
