--- a/05.html
+++ b/05.html
@@ -36,34 +36,65 @@
 
 </div><div class="verse">
 
-真白い君の肩を抱きながら
-何を言えばいいのかわからない僕だったよ
+<p><ruby><rb>真白</rb><rt>まっしろ</rt></ruby>い<ruby><rb>君</rb><rt>きみ</rt></ruby>の<ruby><rb>肩</rb><rt>かた</rt></ruby>を<ruby><rb>抱</rb><rt>いだ</rt></ruby>きながら</p>
+<p><ruby><rb>何</rb><rt>なに</rt></ruby>を<ruby><rb>言</rb><rt>い</rt></ruby>えばいいのかわからない<ruby><rb>僕</rb><rt>ぼく</rt></ruby>だったよ</p>
 
-知ることもなく　消えては浮かぶ君との影　すぎていく影
-意味なんかない　意味なんかない
-今にも僕は泣きそうだよ
+</div><div class="verse">
 
-このまま連れてってよ　僕だけを連れてってよ
-どこまでも連れてってよ
+<p><ruby><rb>知</rb><rt>し</rt></ruby>ることもなく</p>
+<p><ruby><rb>消</rb><rt>き</rt></ruby>えては<ruby><rb>浮</rb><rt>う</rt></ruby>かぶ<ruby><rb>君</rb><rt>きみ</rt></ruby>との<ruby><rb>影</rb><rt>かげ</rt></ruby></p>
+<p>すぎていく<ruby><rb>影</rb><rt>かげ</rt></ruby></p>
+<p><ruby><rb>意味</rb><rt>いみ</rt></ruby>なんかない</p>
+<p><ruby><rb>意味</rb><rt>いみ</rt></ruby>なんかない</p>
+<p><ruby><rb>今</rb><rt>いま</rt></ruby>にも<ruby><rb>僕</rb><rt>ぼく</rt></ruby>は<ruby><rb>泣</rb><rt>な</rt></ruby>きそうだよ</p>
 
-君とだけ二人落ちていく
-BABY, IT'S BLUE
-友達もいなくなって
-BABY, IT'S BLUE
+</div><div class="verse">
 
-夕暮れの君の影を追いかけながら
-今もこのままで　止まっちまいたい　そんな僕さ
+<p>このまま<ruby><rb>連</rb><rt>つ</rt></ruby>れてってよ</p>
+<p><ruby><rb>僕</rb><rt>ぼく</rt></ruby>だけを<ruby><rb>連</rb><rt>つ</rt></ruby>れてってよ</p>
+<p>どこまでも<ruby><rb>連</rb><rt>つ</rt></ruby>れてってよ</p>
 
-今日が終わっても　明日がきて　長くはかなく　日々は続くさ
-意味なんかない　意味なんかない
-今にも僕は泣きそうだよ
+</div><div class="verse">
 
-このまま連れてってよ　僕だけを連れてってよ
-遠くへ連れてってよ
+<p><ruby><rb>君</rb><rt>くん</rt></ruby>とだけ<ruby><rb>二</rb><rt>に</rt></ruby><ruby><rb>人</rb><rt>にん</rt></ruby><ruby><rb>落</rb><rt>お</rt></ruby>ちていく</p>
+<p class="english">BABY, IT'S BLUE</p>
+<p><ruby><rb>友達</rb><rt>ともだち</rt></ruby>もいなくなって</p>
+<p class="english">BABY, IT'S BLUE</p>
 
-君とだけ二人落ちていく
-BABY, IT'S BLUE
-友達もいなくなって
-BABY, IT'S BLUE
-誰よりも　大好きだった
-BABY, IT'S BLUE
+</div><div class="verse">
+
+<p><ruby><rb>夕暮</rb><rt>ゆうぐ</rt></ruby>れの<ruby><rb>君</rb><rt>きみ</rt></ruby>の<ruby><rb>影</rb><rt>かげ</rt></ruby>を<ruby><rb>追</rb><rt>お</rt></ruby>いかけながら</p>
+<p><ruby><rb>今</rb><rt>いま</rt></ruby>もこのままで</p>
+<p><ruby><rb>止</rb><rt>と</rt></ruby>まっちまいたい</p>
+<p>そんな<ruby><rb>僕</rb><rt>ぼく</rt></ruby>さ</p>
+
+</div><div class="verse">
+
+<p><ruby><rb>今日</rb><rt>きょう</rt></ruby>が<ruby><rb>終</rb><rt>お</rt></ruby>わっても</p>
+<p><ruby><rb>明日</rb><rt>あした</rt></ruby>がきて</p>
+<p><ruby><rb>長</rb><rt>なが</rt></ruby>くはかなく</p>
+<p><ruby><rb>日々</rb><rt>ひび</rt></ruby>は<ruby><rb>続</rb><rt>つづ</rt></ruby>くさ</p>
+<p><ruby><rb>意味</rb><rt>いみ</rt></ruby>なんかない</p>
+<p><ruby><rb>意味</rb><rt>いみ</rt></ruby>なんかない</p>
+<p><ruby><rb>今</rb><rt>いま</rt></ruby>にも<ruby><rb>僕</rb><rt>ぼく</rt></ruby>は<ruby><rb>泣</rb><rt>な</rt></ruby>きそうだよ</p>
+
+</div><div class="verse">
+
+<p>このまま<ruby><rb>連</rb><rt>つ</rt></ruby>れてってよ</p>
+<p><ruby><rb>僕</rb><rt>ぼく</rt></ruby>だけを<ruby><rb>連</rb><rt>つ</rt></ruby>れてってよ</p>
+<p><ruby><rb>遠</rb><rt>とお</rt></ruby>くへ<ruby><rb>連</rb><rt>つ</rt></ruby>れてってよ</p>
+
+</div><div class="verse">
+
+<p><ruby><rb>君</rb><rt>くん</rt></ruby>とだけ<ruby><rb>二</rb><rt>に</rt></ruby><ruby><rb>人</rb><rt>にん</rt></ruby><ruby><rb>落</rb><rt>お</rt></ruby>ちていく</p>
+<p class="english">BABY, IT'S BLUE</p>
+<p><ruby><rb>友達</rb><rt>ともだち</rt></ruby>もいなくなって</p>
+<p class="english">BABY, IT'S BLUE</p>
+<p><ruby><rb>誰</rb><rt>だれ</rt></ruby>よりも</p>
+<p><ruby><rb>大好</rb><rt>だいす</rt></ruby>きだった</p>
+<p class="english">BABY, IT'S BLUE</p>
+
+</div>
+
+</body>
+</html>
