more fishmans, added next 3

--- a/05.html
+++ b/05.html
@@ -36,7 +36,7 @@
 
 </div><div class="verse">
 
-<p><ruby><rb>真白</rb><rt>まっしろ</rt></ruby>い<ruby><rb>君</rb><rt>きみ</rt></ruby>の<ruby><rb>肩</rb><rt>かた</rt></ruby>を<ruby><rb>抱</rb><rt>いだ</rt></ruby>きながら</p>
+<p><ruby><rb>真白</rb><rt>まっしろ</rt></ruby>い<ruby><rb>君</rb><rt>きみ</rt></ruby>の<ruby><rb>肩</rb><rt>かた</rt></ruby>を<ruby><rb>抱</rb><rt>だ</rt></ruby>きながら</p>
 <p><ruby><rb>何</rb><rt>なに</rt></ruby>を<ruby><rb>言</rb><rt>い</rt></ruby>えばいいのかわからない<ruby><rb>僕</rb><rt>ぼく</rt></ruby>だったよ</p>
 
 </div><div class="verse">
@@ -56,7 +56,7 @@
 
 </div><div class="verse">
 
-<p><ruby><rb>君</rb><rt>くん</rt></ruby>とだけ<ruby><rb>二</rb><rt>に</rt></ruby><ruby><rb>人</rb><rt>にん</rt></ruby><ruby><rb>落</rb><rt>お</rt></ruby>ちていく</p>
+<p><ruby><rb>君</rb><rt>きみ</rt></ruby>とだけ<ruby><ruby><rb>二人</rb><rt>ふたり</rt></ruby><ruby><rb>落</rb><rt>お</rt></ruby>ちていく</p>
 <p class="english">BABY, IT'S BLUE</p>
 <p><ruby><rb>友達</rb><rt>ともだち</rt></ruby>もいなくなって</p>
 <p class="english">BABY, IT'S BLUE</p>
@@ -86,7 +86,7 @@
 
 </div><div class="verse">
 
-<p><ruby><rb>君</rb><rt>くん</rt></ruby>とだけ<ruby><rb>二</rb><rt>に</rt></ruby><ruby><rb>人</rb><rt>にん</rt></ruby><ruby><rb>落</rb><rt>お</rt></ruby>ちていく</p>
+<p><ruby><rb>君</rb><rt>きみ</rt></ruby>とだけ<ruby><rb>二人</rb><rt>ふたり</rt></ruby><ruby><rb>落</rb><rt>お</rt></ruby>ちていく</p>
 <p class="english">BABY, IT'S BLUE</p>
 <p><ruby><rb>友達</rb><rt>ともだち</rt></ruby>もいなくなって</p>
 <p class="english">BABY, IT'S BLUE</p>
