--- a/06.html
+++ b/06.html
@@ -43,7 +43,7 @@
 
 </div><div class=verse>
 
-<p><ruby><rb>化粧</rb><rt>けしょう</rt></ruby><ruby><rb>落</rb><rt>お</rt></ruby>とした<ruby><rb>後</rb><rt>のち</rt></ruby>の</p>
+<p><ruby><rb>化粧</rb><rt>けしょう</rt></ruby><ruby><rb>落</rb><rt>お</rt></ruby>とした<ruby><rb>後</rb><rt>ご</rt></ruby>の</p>
 <p><ruby><rb>鏡</rb><rt>かがみ</rt></ruby>の<ruby><rb>中</rb><rt>なか</rt></ruby>の<ruby><rb>顔</rb><rt>かお</rt></ruby></p>
 <p><ruby><rb>本当</rb><rt>ほんとう</rt></ruby>はまだ<ruby><rb>離</rb><rt>はな</rt></ruby>れたくない</p>
 <p><ruby><rb>涙</rb><rt>なみだ</rt></ruby>でゆがんでる</p>
