--- a/index.html
+++ b/index.html
@@ -21,4 +21,10 @@
 	
 	<p><div class="note">3</div><a href="03.html">GO!GO!7188 – ジェットにんぢん</a></p>
 	
+	<p><div class="note" style="background-color:#757541;color:#d3b690">4</div><a href="04.html">The Pillows – My Girl</a></p>
+	
+	<p><div class="note" style="background-color:#757541;color:#d3b690">5</div><a href="05.html">Fishmans – BABY BLUE</a></p>
+	
+	<p><div class="note" style="background-color:#757541;color:#d3b690">6</div><a href="06.html">Jitterin' Jinn – エヴリデイ</a></p>
+	
 </div>
