--- a/06.html
+++ b/06.html
@@ -78,7 +78,7 @@
 
 </div><div class=verse>
 
-<p>ダーリン　<ruby><rb>神戸</rb><rt>こうべ</rt></ruby>の<ruby><rb>港</rb><rt>みなと</rt></ruby>のろふとで</p>
+<p>ダーリン　<ruby><rb>神戸</rb><rt>こうべ</rt></ruby>の<ruby><rb>港</rb><rt>みなと</rt></ruby>のロフトで</p>
 <p><ruby><rb>昔</rb><rt>むかし</rt></ruby>は<ruby><rb>会</rb><rt>あ</rt></ruby>う<ruby><rb>度</rb><rt>たび</rt></ruby>　<ruby><rb>朝</rb><rt>あさ</rt></ruby>まで<ruby><rb>騒</rb><rt>さわ</rt></ruby>いだね</p>
 <p><ruby><rb>机</rb><rt>つくえ</rt></ruby>の<ruby><rb>上</rb><rt>うえ</rt></ruby>　フォトスタンド</p>
 <p><ruby><rb>色</rb><rt>いろ</rt></ruby>あせた　<ruby><rb>思</rb><rt>おも</rt></ruby>い<ruby><rb>出</rb><rt>で</rt></ruby>に　さよなら</p>
