fixing note syntax

--- a/03.html
+++ b/03.html
@@ -1,19 +1,13 @@
 <html>
 <head>
 	<link rel="stylesheet" href="style.css">
-	<style>
-		.note{
-			--notebgcolor: #db9c42;
-			--notecolor: #d3c8c3;
-		}
-	</style>
 	<script src="script.js">
 	</script>
 </head>
 <body>
 
 <div class="song">
-	<p><div class="note" style="text-indent:-2px">♫</div>	GO!GO!7188 – <a href="https://open.spotify.com/track/4dbYEeyp0Ercj2zBp5x8Xh?si=655ebbea4a9746de" target="_blank">ジェットにんぢん</a> ↗</p>
+	<p><div class="note note1" style="text-indent:-2px">♫</div>	GO!GO!7188 – <a href="https://open.spotify.com/track/4dbYEeyp0Ercj2zBp5x8Xh?si=655ebbea4a9746de" target="_blank">ジェットにんぢん</a> ↗</p>
 	
 	<p>
 		<label class="switch" style="vertical-align:middle;">
