--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
 <html>
 <head>
 	<link rel="stylesheet" href="style.css">
-	<style>
-		.note{
-			--notebgcolor: #db9c42;
-			--notecolor: #d3c8c3;
-		}
-	</style>
 	<script src="script.js">
 	</script>
 </head>
@@ -15,16 +9,16 @@
 <div class="song"><p><span style="color:#d3b690;">˖</span><span style="color:#d3c8c3;">⁺</span><span style="color:#d3b690;">‧</span><span style="color:#d3c8c3;">₊</span><span style="color:#ba8a33;">˚</span><span style="color:#db9c42;">✦</span> jmix <span style="color:#db9c42;">✦</span><span style="color:#ba8a33;">˚</span><span style="color:#d3c8c3;">₊</span><span style="color:#d3b690;">‧</span><span style="color:#d3c8c3;">⁺</span><span style="color:#d3b690;">˖</span></p></div>
 
 <div class="song">
-	<p><div class="note">1</div><a href="01.html">Anri – 悲しみが止まらない</a></p>
+	<p><div class="note note1">1</div><a href="01.html">Anri – 悲しみが止まらない</a></p>
 	
-	<p><div class="note">2</div><a href="02.html">Akiko Yano – ただいま</a></p>
+	<p><div class="note note1">2</div><a href="02.html">Akiko Yano – ただいま</a></p>
 	
-	<p><div class="note">3</div><a href="03.html">GO!GO!7188 – ジェットにんぢん</a></p>
+	<p><div class="note note1">3</div><a href="03.html">GO!GO!7188 – ジェットにんぢん</a></p>
 	
-	<p><div class="note" style="background-color:#757541;color:#d3b690">4</div><a href="04.html">The Pillows – My Girl</a></p>
+	<p><div class="note note2">4</div><a href="04.html">The Pillows – My Girl</a></p>
 	
-	<p><div class="note" style="background-color:#757541;color:#d3b690">5</div><a href="05.html">Fishmans – BABY BLUE</a></p>
+	<p><div class="note note2">5</div><a href="05.html">Fishmans – BABY BLUE</a></p>
 	
-	<p><div class="note" style="background-color:#757541;color:#d3b690">6</div><a href="06.html">Jitterin' Jinn – エヴリデイ</a></p>
+	<p><div class="note note2">6</div><a href="06.html">Jitterin' Jinn – エヴリデイ</a></p>
 	
 </div>
