--- a/01.html
+++ b/01.html
@@ -1,19 +1,13 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css">
-	<style>
-		.note{
-			--notebgcolor: #db9c42;
-			--notecolor: #d3c8c3;
-		}
-	</style>
 	<script src="script.js">
 	</script>
 </head>
 <body>
 
 <div class="song">
-	<p><div class="note" style="text-indent:-2px">♫</div>	Anri – <a href="https://open.spotify.com/track/3FYDqY5BRtx3IVSaiQZSze?si=fb39318f40234fe8" target="_blank">悲しみが止まらない</a> ↗</p>
+	<p><div class="note note1" style="text-indent:-2px">♫</div>	Anri – <a href="https://open.spotify.com/track/3FYDqY5BRtx3IVSaiQZSze?si=fb39318f40234fe8" target="_blank">悲しみが止まらない</a> ↗</p>
 	
 	<p>
 		<label class="switch" style="vertical-align:middle;">
