--- a/02.html
+++ b/02.html
@@ -1,19 +1,13 @@
 <html>
 <head>
 	<link rel="stylesheet" href="style.css">
-	<style>
-		.note{
-			--notebgcolor: #db9c42;
-			--notecolor: #d3c8c3;
-		}
-	</style>
 	<script src="script.js">
 	</script>
 </head>
 <body>
 
 <div class="song">
-	<p><div class="note" style="text-indent:-2px">♫</div>	Akiko Yano – <a href="https://open.spotify.com/track/12HduUydL4ITzch9Rei3lt?si=4b7810ec36b64c6a" target="_blank">ただいま</a> ↗</p>
+	<p><div class="note note1" style="text-indent:-2px">♫</div>	Akiko Yano – <a href="https://open.spotify.com/track/12HduUydL4ITzch9Rei3lt?si=4b7810ec36b64c6a" target="_blank">ただいま</a> ↗</p>
 	
 	<p>
 		<label class="switch" style="vertical-align:middle;">
