--- a/04.html
+++ b/04.html
@@ -1,19 +1,13 @@
 <html>
 <head>
 	<link rel="stylesheet" href="style.css">
-	<style>
-		.note{
-			--notebgcolor: #757541;
-			--notecolor: #d3b690;
-		}
-	</style>
 	<script src="script.js">
 	</script>
 </head>
 <body>
 
 <div class="song">
-	<p><div class="note" style="text-indent:-2px">♫</div>	The Pillows – <a href="https://open.spotify.com/track/20H0fLyAOHzyyfcJlSWlFS?si=5549256a82164533" target="_blank">My Girl</a> ↗</p>
+	<p><div class="note note2" style="text-indent:-2px">♫</div>	The Pillows – <a href="https://open.spotify.com/track/20H0fLyAOHzyyfcJlSWlFS?si=5549256a82164533" target="_blank">My Girl</a> ↗</p>
 	
 	<p>
 		<label class="switch" style="vertical-align:middle;">
