--- a/05.html
+++ b/05.html
@@ -1,19 +1,13 @@
 <html>
 <head>
 	<link rel="stylesheet" href="style.css">
-	<style>
-		.note{
-			--notebgcolor: #757541;
-			--notecolor: #d3b690;
-		}
-	</style>
 	<script src="script.js">
 	</script>
 </head>
 <body>
 
 <div class="song">
-	<p><div class="note" style="text-indent:-2px">♫</div>	Fishmans – <a href="https://open.spotify.com/track/6Aw3fZGUZTfWcbMWDdbrpz?si=f3242b5c0fc94314" target="_blank">BABY BLUE</a> ↗</p>
+	<p><div class="note note2" style="text-indent:-2px">♫</div>	Fishmans – <a href="https://open.spotify.com/track/6Aw3fZGUZTfWcbMWDdbrpz?si=f3242b5c0fc94314" target="_blank">BABY BLUE</a> ↗</p>
 	
 	<p>
 		<label class="switch" style="vertical-align:middle;">
