--- a/01.html
+++ b/01.html
@@ -17,12 +17,12 @@
 	</p>
 	
 	<p style="width:350px;height:20px;">
-		<span style="background-color:#c5bdba;display:inline-block;width:26%;height:100%;margin:0;">
-		</span><span style="background-color:#a4b5b5;display:inline-block;width:30%;height:100%;margin:0;">	
-		</span><span style="background-color:#d6d1ab;display:inline-block;width:26%;height:100%;margin:0;">
-		</span><span style="background-color:#dbbc85;display:inline-block;width:10%;height:100%;margin:0;">	
-		</span><span style="background-color:#dbcab0;display:inline-block;width:6%;height:100%;margin:0px !important;">	
-		</span><span style="background-color:#efa571;display:inline-block;width:0%;height:100%;margin:0;">
+		<span class="words lower-elementary" style="width:26%;">
+		</span><span class="words upper-elementary" style="width:30%;">	
+		</span><span class="words lower-intermediate" style="width:26%;">
+		</span><span class="words upper-intermediate" style="width:10%;">	
+		</span><span class="words lower-advanced" style="width:6%;">	
+		</span><span class="words upper-advanced" style="width:0%;">
 		</span>
 	</p>
 	
