--- a/03.html
+++ b/03.html
@@ -17,12 +17,12 @@
 	</p>
 	
 	<p style="width:350px;height:20px;">
-		<span style="background-color:#c5bdba;display:inline-block;width:27%;height:100%;margin:0;">
-		</span><span style="background-color:#a4b5b5;display:inline-block;width:17%;height:100%;margin:0;">	
-		</span><span style="background-color:#d6d1ab;display:inline-block;width:25%;height:100%;margin:0;">
-		</span><span style="background-color:#dbbc85;display:inline-block;width:13%;height:100%;margin:0;">	
-		</span><span style="background-color:#dbcab0;display:inline-block;width:17%;height:100%;margin:0px !important;">	
-		</span><span style="background-color:#efa571;display:inline-block;width:0%;height:100%;margin:0;">
+		<span class="words lower-elementary" style="width:27%;">
+		</span><span class="words upper-elementary" style="width:17%;">	
+		</span><span class="words lower-intermediate" style="width:25%;">
+		</span><span class="words upper-intermediate" style="width:13%;">	
+		</span><span class="words lower-advanced" style="width:17%;">	
+		</span><span class="words upper-advanced" style="width:0%;">
 		</span>
 	</p>
 	
