soo much stuff, tooltips etc

--- a/01.html
+++ b/01.html
@@ -17,16 +17,14 @@
 	</p>
 	
 	<p style="width:350px;height:20px;">
-		<span class="words lower-elementary" style="width:26%;">
-		</span><span class="words upper-elementary" style="width:30%;">	
-		</span><span class="words lower-intermediate" style="width:26%;">
-		</span><span class="words upper-intermediate" style="width:10%;">	
-		</span><span class="words lower-advanced" style="width:6%;">	
-		</span><span class="words upper-advanced" style="width:0%;">
+		<span class="words lower-elementary" style="width:27%;"><span class="tooltiptext lower-elementary">lower elementary</span>
+		</span><span class="words upper-elementary" style="width:33%;"><span class="tooltiptext upper-elementary">upper elementary</span>
+		</span><span class="words lower-intermediate" style="width:25%;"><span class="tooltiptext lower-intermediate">lower intermediate</span>
+		</span><span class="words upper-intermediate" style="width:5%;"><span class="tooltiptext upper-intermediate">upper intermediate</span>
+		</span><span class="words lower-advanced" style="width:8%;"><span class="tooltiptext lower-advanced">lower advanced</span>
+		</span><span class="words upper-advanced" style="width:0%;"><span class="tooltiptext upper-advanced">upper advanced</span>
 		</span>
 	</p>
-	
-	<p style="color:#757541;font-size:16px;">readability: <span style="padding:2px;background-color:#a4b5b5">easy</span></p>
 
 </div><div class="verse">
 
