--- a/06.html
+++ b/06.html
@@ -17,17 +17,15 @@
 	</p>
 	
 	<p style="width:350px;height:20px;">
-		<span class="words lower-elementary" style="width:34%;">
-		</span><span class="words upper-elementary" style="width:20%;">	
-		</span><span class="words lower-intermediate" style="width:31%;">
-		</span><span class="words upper-intermediate" style="width:12%;">	
-		</span><span class="words lower-advanced" style="width:1%;">	
-		</span><span class="words upper-advanced" style="width:0%;">
+		<span class="words lower-elementary" style="width:34%;"><span class="tooltiptext lower-elementary">lower elementary</span>
+		</span><span class="words upper-elementary" style="width:20%;"><span class="tooltiptext upper-elementary">upper elementary</span>
+		</span><span class="words lower-intermediate" style="width:31%;"><span class="tooltiptext lower-intermediate">lower intermediate</span>
+		</span><span class="words upper-intermediate" style="width:12%;"><span class="tooltiptext upper-intermediate">upper intermediate</span>
+		</span><span class="words lower-advanced" style="width:1%;"><span class="tooltiptext lower-advanced">lower advanced</span>
+		</span><span class="words upper-advanced" style="width:0%;"><span class="tooltiptext upper-advanced">upper advanced</span>
 		</span>
 	</p>
 	
-	<p style="color:#757541;font-size:16px;">readability: <span style="padding:2px;background-color:#a4b5b5">easy</span></p>
-
 </div><div class="verse">
 	
 <p>ダーリン　<ruby><rb>今夜</rb><rt>こんや</rt></ruby>は<ruby><rb>迎</rb><rt>むか</rt></ruby>えにきてきて</p>
