--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
 </head>
 <body>
 
-<div class="song"><p><span style="color:#d3b690;">˖</span><span style="color:#d3c8c3;">⁺</span><span style="color:#d3b690;">‧</span><span style="color:#d3c8c3;">₊</span><span style="color:#ba8a33;">˚</span><span style="color:#db9c42;">✦</span> jmix <span style="color:#db9c42;">✦</span><span style="color:#ba8a33;">˚</span><span style="color:#d3c8c3;">₊</span><span style="color:#d3b690;">‧</span><span style="color:#d3c8c3;">⁺</span><span style="color:#d3b690;">˖</span></p></div>
+<div class="song"><p><span style="color:#d3b690;">˖</span><span style="color:#d3c8c3;">⁺</span><span style="color:#d3b690;">‧</span><span style="color:#d3c8c3;">₊</span><span style="color:#db9c42;">˚</span><span style="color:#d3b690;">✦</span> jmix <span style="color:#d3b690;">✦</span><span style="color:#db9c42;">˚</span><span style="color:#d3c8c3;">₊</span><span style="color:#d3b690;">‧</span><span style="color:#d3c8c3;">⁺</span><span style="color:#d3b690;">˖</span></p></div>
 
 <div class="song">
-	<p><div class="note note1">1</div><a href="01.html">Anri – 悲しみが止まらない</a></p>
 	
-	<p><div class="note note1">2</div><a href="02.html">Akiko Yano – ただいま</a></p>
+	<p><div class="note note1">1</div><a href="01.html">Anri – 悲しみが止まらない</a>&emsp;<span class="datas">4:24</span>&emsp;<span class="datas">59 words</span></p>
 	
-	<p><div class="note note1">3</div><a href="03.html">GO!GO!7188 – ジェットにんぢん</a></p>
+	<p><div class="note note1">2</div><a href="02.html">Akiko Yano – ただいま</a>&emsp;<span class="datas">3:45</span>&emsp;<span class="datas">135 words</span></p>
 	
-	<p><div class="note note2">4</div><a href="04.html">The Pillows – My Girl</a></p>
+	<p><div class="note note1">3</div><a href="03.html">GO!GO!7188 – ジェットにんぢん</a>&emsp;<span class="datas">3:30</span>&emsp;<span class="datas">88 words</span></p>
 	
-	<p><div class="note note2">5</div><a href="05.html">Fishmans – BABY BLUE</a></p>
+	<p><div class="note note2">4</div><a href="04.html">The Pillows – My Girl</a>&emsp;<span class="datas">4:30</span>&emsp;<span class="datas">37 words</span></p>
 	
-	<p><div class="note note2">6</div><a href="06.html">Jitterin' Jinn – エヴリデイ</a></p>
+	<p><div class="note note2">5</div><a href="05.html">Fishmans – BABY BLUE</a>&emsp;<span class="datas">6:09</span>&emsp;<span class="datas">69 words</span></p>
+	
+	<p><div class="note note2">6</div><a href="06.html">Jitterin' Jinn – エヴリデイ</a>&emsp;<span class="datas">3:49</span>&emsp;<span class="datas">73 words</span></p>
 	
 </div>
