--- a/04.html
+++ b/04.html
@@ -17,17 +17,15 @@
 	</p>
 	
 	<p style="width:350px;height:20px;">
-		<span class="words lower-elementary" style="width:40%;">
-		</span><span class="words upper-elementary" style="width:24%;">	
-		</span><span class="words lower-intermediate" style="width:10%;">
-		</span><span class="words upper-intermediate" style="width:24%;">	
-		</span><span class="words lower-advanced" style="width:0%;">	
-		</span><span class="words upper-advanced" style="width:0%;">
+		<span class="words lower-elementary" style="width:40%;"><span class="tooltiptext lower-elementary">lower elementary</span>
+		</span><span class="words upper-elementary" style="width:24%;"><span class="tooltiptext upper-elementary">upper elementary</span>
+		</span><span class="words lower-intermediate" style="width:10%;"><span class="tooltiptext lower-intermediate">lower intermediate</span>
+		</span><span class="words upper-intermediate" style="width:24%;"><span class="tooltiptext upper-intermediate">upper intermediate</span>
+		</span><span class="words lower-advanced" style="width:0%;"><span class="tooltiptext lower-advanced">lower advanced</span>
+		</span><span class="words upper-advanced" style="width:0%;"><span class="tooltiptext upper-advanced">upper advanced</span>
 		</span>
 	</p>
 	
-	<p style="color:#757541;font-size:16px;">readability: <span style="padding:2px;background-color:#a4b5b5">easy</span></p>
-
 </div><div class="verse">
 
 <p>どんな<ruby><rb>言葉</rb><rt>ことば</rt></ruby>より</p>
