--- a/05.html
+++ b/05.html
@@ -17,17 +17,15 @@
 	</p>
 	
 	<p style="width:350px;height:20px;">
-		<span class="words lower-elementary" style="width:44%;">
-		</span><span class="words upper-elementary" style="width:26%;">	
-		</span><span class="words lower-intermediate" style="width:7%;">
-		</span><span class="words upper-intermediate" style="width:21%;">	
-		</span><span class="words lower-advanced" style="width:0%;">	
-		</span><span class="words upper-advanced" style="width:0%;">
+		<span class="words lower-elementary" style="width:44%;"><span class="tooltiptext lower-elementary">lower elementary</span>
+		</span><span class="words upper-elementary" style="width:26%;"><span class="tooltiptext upper-elementary">upper elementary</span>
+		</span><span class="words lower-intermediate" style="width:7%;"><span class="tooltiptext lower-intermediate">lower intermediate</span>
+		</span><span class="words upper-intermediate" style="width:21%;"><span class="tooltiptext upper-intermediate">upper intermediate</span>
+		</span><span class="words lower-advanced" style="width:0%;"><span class="tooltiptext lower-advanced">lower advanced</span>
+		</span><span class="words upper-advanced" style="width:0%;"><span class="tooltiptext upper-advanced">upper advanced</span>
 		</span>
 	</p>
 	
-	<p style="color:#757541;font-size:16px;">readability: <span style="padding:2px;background-color:#d6d1ab">lower intermediate</span></p>
-
 </div><div class="verse">
 
 <p><ruby><rb>真白</rb><rt>まっしろ</rt></ruby>い<ruby><rb>君</rb><rt>きみ</rt></ruby>の<ruby><rb>肩</rb><rt>かた</rt></ruby>を<ruby><rb>抱</rb><rt>だ</rt></ruby>きながら</p>
