--- a/07.html
+++ b/07.html
@@ -1,63 +1,88 @@
-ぼんやりTVを観てたら
-おかしな夢を見ていた
-気がついて時計を見ると
-トーキョーは夜の七時
+<html>
+<head>
+    <link rel="stylesheet" href="style.css">
+	<script src="script.js">
+	</script>
+</head>
+<body>
 
-あなたに逢いに行くのに
-朝からドレスアップした
-ひと晩中　愛されたい
-トーキョーは夜の七時
+<div class="song">
+	<p><div class="note note1" style="text-indent:-2px">♫</div>	P-MODEL – <a href="https://open.spotify.com/track/6Ct69jAq9GdFipLws13L1y?si=f0d6ecfac5e54a34" target="_blank">HEAVEN</a> ↗</p>
+	
+	<p>
+		<label class="switch" style="vertical-align:middle;">
+		<input type="checkbox" id="myCheck" onclick="toggle_furigana()">
+		<span class="slider round"></span>
+		</label> <span style="font-size:16px;">furigana</span>
+	</p>
+	
+	<p style="width:350px;height:20px;">
+		<span class="words lower-elementary" style="width:16%;"><span class="tooltiptext lower-elementary">lower elementary</span>
+		</span><span class="words upper-elementary" style="width:13%;"><span class="tooltiptext upper-elementary">upper elementary</span>
+		</span><span class="words lower-intermediate" style="width:32%;"><span class="tooltiptext lower-intermediate">lower intermediate</span>
+		</span><span class="words upper-intermediate" style="width:23%;"><span class="tooltiptext upper-intermediate">upper intermediate</span>
+		</span><span class="words lower-advanced" style="width:13%;"><span class="tooltiptext lower-advanced">lower advanced</span>
+		</span><span class="words upper-advanced" style="width:0%;"><span class="tooltiptext upper-advanced">upper advanced</span>
+		</span>
+	</p>
 
-待ち合わせたレストランは
-もうつぶれてなかった
-お腹が空いて死にそうなの
-早くあなたに逢いたい
-早くあなたに逢いたい
+</div><div class="verse">
+	
+<p>バースデイの<ruby><rb>夜</rb><rt>よ</rt></ruby><ruby><rb>更</rb><rt>ふ</rt></ruby>けて</p>
+<p>バカ<ruby><rb>騒</rb><rt>さわ</rt></ruby>ぎの<ruby><rb>後</rb><rt>あと</rt></ruby></p>
+<p>ひとつふたっつみっつ</p>
+<p><ruby><rb>老</rb><rt>ろう</rt></ruby><ruby><rb>夫婦顔</rb><rt>ふうふがお</rt></ruby>の<ruby><rb>嬰児</rb><rt>えいじ</rt></ruby></p>
+<p>こよみやぶる<ruby><rb>手</rb><rt>て</rt></ruby>つき</p>
+<p><ruby><rb>記憶</rb><rt>きおく</rt></ruby>たどる<ruby><rb>目</rb><rt>め</rt></ruby>つき</p>
+<p>ふくみ<ruby><rb>声</rb><rt>ごえ</rt></ruby>のことば</p>
+<p>のこぎりギリギリ</p>
 
-トーキョーは夜の七時
-嘘みたいに輝く街
-とても淋しい　だから逢いたい
-トーキョーは夜の七時
-本当に愛してるのに
-とても淋しい　あなたに逢いたい
+</div><div class="verse">
 
-ぼんやり風に吹かれた
-タクシーの窓を開けて
-あなたに逢いに急ぐの
-トーキョーは夜の七時
+<p><ruby><rb>妊婦</rb><rt>にんぷ</rt></ruby>のアリバイ</p>
+<p class="english">Heaven, heaven</p>
+<p class="english">Heaven, heaven</p>
 
-留守番電話が
-突然ひとりで廻り始める
-ひと晩中　喋り続ける
-トーキョーの夜はフシギ
+</div><div class="verse">
+	
+<p>バスストップならぶ<ruby><rb>夢</rb><rt>ゆめ</rt></ruby>に</p>
+<p>おされ<ruby><rb>乗</rb><rt>の</rt></ruby>り<ruby><rb>遅</rb><rt>おく</rt></ruby>れて</p>
+<p><ruby><rb>体</rb><rt>からだ</rt></ruby>だけがはしり</p>
+<p>ゆれるバスの<ruby><rb>景色</rb><rt>けしき</rt></ruby></p>
+<p>ひとふで<ruby><rb>書</rb><rt>が</rt></ruby>きの<ruby><rb>窓</rb><rt>まど</rt></ruby></p>
+<p>ひとふで<ruby><rb>書</rb><rt>が</rt></ruby>きのひと</p>
+<p><ruby><rb>落</rb><rt>お</rt></ruby>ちる<ruby><rb>夢</rb><rt>ゆめ</rt></ruby>の<ruby><rb>汗</rb><rt>あせ</rt></ruby>は</p>
+<p>タロットカードの<ruby><rb>雨</rb><rt>あめ</rt></ruby></p>
+<p>たおれつぶれにじり</p>
+<p><ruby><rb>出口</rb><rt>でぐち</rt></ruby>さがす<ruby><rb>行</rb><rt>ゆ</rt></ruby>く<ruby><rb>手</rb><rt>て</rt></ruby></p>
 
-交差点で信号待ち
-あなたはいつも優しい
-今日も　少し
-遅刻してる
-早くあなたに逢いたい
-早くあなたに逢いたい
+</div><div class="verse">
+	
+<p>はだかる<ruby><rb>夢</rb><rt>ゆめ</rt></ruby>は</p>
+<p class="english">Heaven, heaven</p>
+<p class="english">Heaven, heaven</p>
 
-トーキョーは夜の七時
-クリスマスじゃないけど
-とても淋しい　だから逢いたい
-トーキョーは夜の七時
-本当に愛してるのに
-とても淋しい　あなたに逢いたい
+</div><div class="verse">
 
-世界中でたったひとり
-私を愛してくれる？
-待ち合わせのレストランは
-もうつぶれてなかった
-バラの花をかかえたまま
-あなたはひとり待ってる
-夢で見たのと同じバラ
-早くあなたに逢いたい
-早くあなたに逢いたい
+<p>ハネムーン エンドレスの</p>
+<p>ドレスのすそやぶれ</p>
+<p><ruby><rb>星</rb><rt>ほし</rt></ruby>のきどうの<ruby><rb>中</rb><rt>なか</rt></ruby>で</p>
+<p>くぎられるストーリー</p>
+<p><ruby><rb>終</rb><rt>お</rt></ruby>わるためのはじめ</p>
+<p>はじめのための<ruby><rb>終</rb><rt>お</rt></ruby>わり</p>
+<p>のぼる<ruby><rb>高</rb><rt>たか</rt></ruby>くのぼる</p>
+<p><ruby><rb>夢</rb><rt>ゆめ</rt></ruby>と<ruby><rb>悪夢</rb><rt>あくむ</rt></ruby>のすきま</p>
+<p>ビショップの<ruby><rb>仰</rb><rt>あお</rt></ruby>ぐヒストリー</p>
+<p>てんびんのはてに</p>
 
-トーキョーは夜の七時
-嘘みたいに輝く街
-とても淋しい　だから逢いたい
-トーキョーは夜の七時
-本当に愛してるのに
-とても淋しい　あなたに逢いたい
+</div><div class="verse">
+
+<p class="english">Birth growth death birth</p>
+<p class="english">Growth birth death growth</p>
+<p class="english">Heaven, heaven</p>
+<p class="english">Heaven, heaven</p>
+
+</div>
+
+</body>
+</html>
