--- a/08.html
+++ b/08.html
@@ -1,49 +1,100 @@
-さよなら さよなら
-Bye-bye, adios
-これから このさき
-いつか どこか　へ
-時計の 針は
-刻々と
-時間を 刻み
-続けているよ ね
+<html>
+<head>
+    <link rel="stylesheet" href="style.css">
+	<script src="script.js">
+	</script>
+</head>
+<body>
 
-さよなら さよなら
-Bye-bye, adios
-だれでも このさき
-いつかは good bye
-ゆめのような
-想い出さえも
-ときとともに
-かすんで きえて いく よね
+<div class="song">
+	<p><div class="note note1" style="text-indent:-2px">♫</div>	Cornelius – <a href="https://open.spotify.com/track/436KJdH0b8Xhnwio7Oq2UK?si=9e80c5cf24274f01" target="_blank">Sometime / Someplace</a> ↗</p>
+	
+	<p>
+		<label class="switch" style="vertical-align:middle;">
+		<input type="checkbox" id="myCheck" onclick="toggle_furigana()">
+		<span class="slider round"></span>
+		</label> <span style="font-size:16px;">furigana</span>
+	</p>
+	
+	<p style="width:350px;height:20px;">
+		<span class="words lower-elementary" style="width:62%;"><span class="tooltiptext lower-elementary">lower elementary</span>
+		</span><span class="words upper-elementary" style="width:9%;"><span class="tooltiptext upper-elementary">upper elementary</span>
+		</span><span class="words lower-intermediate" style="width:14%;"><span class="tooltiptext lower-intermediate">lower intermediate</span>
+		</span><span class="words upper-intermediate" style="width:11%;"><span class="tooltiptext upper-intermediate">upper intermediate</span>
+		</span><span class="words lower-advanced" style="width:1%;"><span class="tooltiptext lower-advanced">lower advanced</span>
+		</span><span class="words upper-advanced" style="width:0%;"><span class="tooltiptext upper-advanced">upper advanced</span>
+		</span>
+	</p>
 
-いつか ね
+</div><div class="verse">
 
-さよなら さよなら
-Bye-bye, adios
-これから このさき
-いつか どこか　へ
-したしい ひとの
-きおくさえも
-ときとともに
-にじんで 消えて 行く よね
+<p>さよならさよなら</p>
+<p class="english">Bye-bye, adios</p>
+<p>これからこのさき</p>
+<p>いつかどこか　へ</p>
+<p><ruby><rb>時計</rb><rt>とけい</rt></ruby>の<ruby><rb>針</rb><rt>はり</rt></ruby>は</p>
+<p><ruby><rb>刻々</rb><rt>こっこく</rt></ruby>と</p>
+<p><ruby><rb>時間</rb><rt>じかん</rt></ruby>を<ruby><rb>刻</rb><rt>きざ</rt></ruby>み</p>
+<p><ruby><rb>続</rb><rt>つづ</rt></ruby>けているよね</p>
 
-いつか
-どこか
+</div><div class="verse">
 
-ぜん いん
-みん な ね
+<p>さよならさよなら</p>
+<p class="english">Bye-bye, adios</p>
+<p>だれでもこのさき</p>
+<p>いつかはgoodbye</p>
+<p>ゆめのような</p>
+<p><ruby><rb>想</rb><rt>おも</rt></ruby>い<ruby><rb>出</rb><rt>で</rt></ruby>さえも</p>
+<p>ときとともに</p>
+<p>かすんできえていくよね</p>
 
-さよなら さよなら
-Bye-bye, adios
-これから どれくらい
-か わからない けど
-そらに ひかる
-星で さえも
-どこかとおく
-ながれて きえて いく よね
+</div><div class="verse">
 
-いつか
-どこか
+<p>いつかね</p>
 
-い つ か
-ど こ か
+</div><div class="verse">
+
+<p>さよならさよなら</p>
+<p class="english">Bye-bye, adios</p>
+<p>これからこのさき</p>
+<p>いつかどこか　へ</p>
+<p>したしいひとの</p>
+<p>きおくさえも</p>
+<p>ときとともに</p>
+<p>にじんで<ruby><rb>消</rb><rt>き</rt></ruby>えて<ruby><rb>行</rb><rt>い</rt></ruby>くよね</p>
+
+</div><div class="verse">
+
+<p>いつか</p>
+<p>どこか</p>
+
+</div><div class="verse">
+
+<p>ぜんいん</p>
+<p>みんなね</p>
+
+</div><div class="verse">
+
+<p>さよならさよなら</p>
+<p class="english">Bye-bye, adios</p>
+<p>これからどれくらい</p>
+<p>かわからないけど</p>
+<p>そらにひかる</p>
+<p><ruby><rb>星</rb><rt>ほし</rt></ruby>でさえも</p>
+<p>どこかとおく</p>
+<p>ながれてきえていくよね</p>
+
+</div><div class="verse">
+
+<p>いつか</p>
+<p>どこか</p>
+
+</div><div class="verse">
+
+<p>いつか</p>
+<p>どこか</p>
+
+</div>
+
+</body>
+</html>
