--- a/09.html
+++ b/09.html
@@ -1,23 +1,70 @@
-地面が揺れる　壁が崩れ落ちる
-鼓膜を突き破って脳天直下　ロッキンルーラ
+<html>
+<head>
+    <link rel="stylesheet" href="style.css">
+	<script src="script.js">
+	</script>
+</head>
+<body>
 
-体中がシビレル　もう　飛び出しそうだ
-赤い血が沸き上がってる　肉は踊りまくってる
-突っ立ったまんまじゃ　いられそうにないぜ
+<div class="song">
+	<p><div class="note note1" style="text-indent:-2px">♫</div>	MO'SOME TONEBENDER – <a href="https://open.spotify.com/track/5ZEtAUdGbXGytPTvV3Jemg?si=75f2223134c64d4d" target="_blank">ロッキンルーラ</a> ↗</p>
+	
+	<p>
+		<label class="switch" style="vertical-align:middle;">
+		<input type="checkbox" id="myCheck" onclick="toggle_furigana()">
+		<span class="slider round"></span>
+		</label> <span style="font-size:16px;">furigana</span>
+	</p>
+	
+	<p style="width:350px;height:20px;">
+		<span class="words lower-elementary" style="width:20%;"><span class="tooltiptext lower-elementary">lower elementary</span>
+		</span><span class="words upper-elementary" style="width:26%;"><span class="tooltiptext upper-elementary">upper elementary</span>
+		</span><span class="words lower-intermediate" style="width:13%;"><span class="tooltiptext lower-intermediate">lower intermediate</span>
+		</span><span class="words upper-intermediate" style="width:26%;"><span class="tooltiptext upper-intermediate">upper intermediate</span>
+		</span><span class="words lower-advanced" style="width:11%;"><span class="tooltiptext lower-advanced">lower advanced</span>
+		</span><span class="words upper-advanced" style="width:2%;"><span class="tooltiptext upper-advanced">upper advanced</span>
+		</span>
+	</p>
 
-アタマを揺さぶられて完全無欠　ロッキンルーラ
+</div><div class="verse">
+	
+<p><ruby><rb>地面</rb><rt>じめん</rt></ruby>が<ruby><rb>揺</rb><rt>ゆ</rt></ruby>れる　<ruby><rb>壁</rb><rt>かべ</rt></ruby>が<ruby><rb>崩</rb><rt>くず</rt></ruby>れ<ruby><rb>落</rb><rt>お</rt></ruby>ちる</p>
+<p><ruby><rb>鼓膜</rb><rt>こまく</rt></ruby>を<ruby><rb>突</rb><rt>つ</rt></ruby>き<ruby><rb>破</rb><rt>やぶ</rt></ruby>って<ruby><rb>脳天</rb><rt>のうてん</rt></ruby><ruby><rb>直下</rb><rt>ちょっか</rt></ruby>　ロッキンルーラ</p>
 
-何が見える　何か見えてる　全部見える
-バイバイ世界　オレはロッキンルーラ
+</div><div class="verse">
 
-お願い
-チョウのように舞ってよ
-ハチのように刺しまくってよ
-天国と地獄を一瞬で味わせて
-ハリケーンみたいにどっかへ吹き飛ばして
-アメーバみたいに骨抜きにしてよ
+<p><ruby><rb>体中</rb><rt>からだちゅう</rt></ruby>がシビレル　もう　<ruby><rb>飛</rb><rt>と</rt></ruby>び<ruby><rb>出</rb><rt>だ</rt></ruby>しそうだ</p>
+<p><ruby><rb>赤</rb><rt>あか</rt></ruby>い<ruby><rb>血</rb><rt>ち</rt></ruby>が<ruby><rb>沸</rb><rt>わ</rt></ruby>き<ruby><rb>上</rb><rt>あ</rt></ruby>がってる　<ruby><rb>肉</rb><rt>にく</rt></ruby>は<ruby><rb>踊</rb><rt>おど</rt></ruby>りまくってる</p>
+<p><ruby><rb>突</rb><rt>つ</rt></ruby>っ<ruby><rb>立</rb><rt>た</rt></ruby>ったまんまじゃ　いられそうにないぜ</p>
 
-生傷ひっぺがして塩すり込んで　ロッキンルーラ
+</div><div class="verse">
 
-何が見える　何か見えてる　全部見える
-バイバイ世界　オレはロッキンルーラ
+<p>アタマを<ruby><rb>揺</rb><rt>ゆ</rt></ruby>さぶられて<ruby><rb>完全</rb><rt>かんぜん</rt></ruby><ruby><rb>無欠</rb><rt>むけつ</rt></ruby>　ロッキンルーラ</p>
+
+</div><div class="verse">
+
+<p><ruby><rb>何</rb><rt>なに</rt></ruby>が<ruby><rb>見</rb><rt>み</rt></ruby>える　<ruby><rb>何</rb><rt>なに</rt></ruby>か<ruby><rb>見</rb><rt>み</rt></ruby>えてる　<ruby><rb>全部</rb><rt>ぜんぶ</rt></ruby><ruby><rb>見</rb><rt>み</rt></ruby>える</p>
+<p>バイバイ<ruby><rb>世界</rb><rt>せかい</rt></ruby>　オレはロッキンルーラ</p>
+
+</div><div class="verse">
+
+<p>お<ruby><rb>願</rb><rt>ねが</rt></ruby>い</p>
+<p>チョウのように<ruby><rb>舞</rb><rt>ま</rt></ruby>ってよ</p>
+<p>ハチのように<ruby><rb>刺</rb><rt>さ</rt></ruby>しまくってよ</p>
+<p><ruby><rb>天国</rb><rt>てんごく</rt></ruby>と<ruby><rb>地獄</rb><rt>じごく</rt></ruby>を<ruby><rb>一瞬</rb><rt>いっしゅん</rt></ruby>で<ruby><rb>味</rb><rt>あじ</rt></ruby>わせて</p>
+<p>ハリケーンみたいにどっかへ<ruby><rb>吹</rb><rt>ふ</rt></ruby>き<ruby><rb>飛</rb><rt>と</rt></ruby>ばして</p>
+<p>アメーバみたいに<ruby><rb>骨抜</rb><rt>ほねぬ</rt></ruby>きにしてよ</p>
+
+</div><div class="verse">
+
+<p><ruby><rb>生傷</rb><rt>なまきず</rt></ruby>ひっぺがして<ruby><rb>塩</rb><rt>しお</rt></ruby>すり<ruby><rb>込</rb><rt>こ</rt></ruby>んで　ロッキンルーラ</p>
+
+</div><div class="verse">
+
+<p><ruby><rb>何</rb><rt>なに</rt></ruby>が<ruby><rb>見</rb><rt>み</rt></ruby>える　<ruby><rb>何</rb><rt>なに</rt></ruby>か<ruby><rb>見</rb><rt>み</rt></ruby>えてる　<ruby><rb>全部</rb><rt>ぜんぶ</rt></ruby><ruby><rb>見</rb><rt>み</rt></ruby>える</p>
+<p>バイバイ<ruby><rb>世界</rb><rt>せかい</rt></ruby>　オレはロッキンルーラ</p>
+
+</div>
+
+</body>
+</html>
