--- a/index.html
+++ b/index.html
@@ -22,4 +22,10 @@
 	
 	<p><div class="note note2">6</div><a href="06.html">Jitterin' Jinn – エヴリデイ</a>&emsp;<span class="datas">3:49</span>&emsp;<span class="datas">73 words</span></p>
 	
+	<p><div class="note note3">7</div><a href="07.html">P-MODEL – HEAVEN</a>&emsp;<span class="datas">3:31</span>&emsp;<span class="datas">73 words</span></p>
+
+	<p><div class="note note3">8</div><a href="08.html">Cornelius – Sometime / Someplace</a>&emsp;<span class="datas">3:49</span>&emsp;<span class="datas">61 words</span></p>
+		
+	<p><div class="note note3">6</div><a href="09.html">MO'SOME TONEBENDER – ロッキンルーラ</a>&emsp;<span class="datas">2:59</span>&emsp;<span class="datas">45 words</span></p>
+	
 </div>
